--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -10,9 +10,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous" />
+      {% load livereload_tags %}
+      {% livereload_script %}
+      {% load static %}
   </head>
   <body class="bg-light">
-    <script src="{% static 'base.js' %}"></script>
     <div class="container">
       {% block content %}
       <div class="text-center my-5">
@@ -32,7 +34,16 @@
         </li>
         {% endfor %}
       </ul>
+      <form class="mt-4" id="task-form">
+        <div class="input-group">
+          <input type="text" class="form-control" id="task" />
+          <div class="input-group-append">
+            <button class="btn btn-primary">Add Task</button>
+          </div>
+        </div>
+      </form>
       {% endblock %}
     </div>
+    <script src="{% static 'functions.js' %}"></script>
   </body>
 </html>
